test: MockMvc getting all requests by user